# search1

./: .gitignore  README.md  app.py  create_admin.py  index.html  pyproject.toml  requirements-vercel.txt  search_engine.py  vercel.json
static/css/: custom.css
static/js/: image-search.js  results.js  search.js
templates/: about.html  admin_dashboard.html  admin_login.html  base.html  index.html  results.html
