[project]
name = "colossus-search"
version = "1.0.0"
description = "A privacy-focused metasearch engine that aggregates results from multiple sources"
authors = [
    {name = "Suham", email = "me@suhamofalltrades.mywire.org"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.13.3",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.69.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
]

[project.urls]
Repository = "https://github.com/suhamofalltrades/colossus-search"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
